src/main/java/com/example/skbspring2024/web/errors/ErrorResponse.java
package com.example.skbspring2024.web.errors;

import lombok.AccessLevel;
import lombok.Data;
import lombok.experimental.FieldDefaults;

@Data
@FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
public class ErrorResponse {
    String code;
    String message;
}
